--- a/Projeto Final IronHack/Final_Project_TimeSeries_Analysis.ipynb
+++ b/Projeto Final IronHack/Final_Project_TimeSeries_Analysis.ipynb
@@ -46,9 +46,68 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-27T18:59:21.401175Z",
+     "start_time": "2020-05-27T18:59:21.378188Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tqdm==4.45.0\n",
+      "matplotlib==3.2.1\n",
+      "statsmodels==0.11.1\n",
+      "seaborn==0.9.0\n",
+      "pandas==1.0.3\n",
+      "numpy==1.18.1\n",
+      "fbprophet==0.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pkg_resources\n",
+    "import types\n",
+    "def get_imports():\n",
+    "    for name, val in globals().items():\n",
+    "        if isinstance(val, types.ModuleType):\n",
+    "            # Split ensures you get root package, \n",
+    "            # not just imported function\n",
+    "            name = val.__name__.split(\".\")[0]\n",
+    "\n",
+    "        elif isinstance(val, type):\n",
+    "            name = val.__module__.split(\".\")[0]\n",
+    "\n",
+    "        # Some packages are weird and have different\n",
+    "        # imported names vs. system/pip names. Unfortunately,\n",
+    "        # there is no systematic way to get pip names from\n",
+    "        # a package's imported name. You'll have to had\n",
+    "        # exceptions to this list manually!\n",
+    "        poorly_named_packages = {\n",
+    "            \"PIL\": \"Pillow\",\n",
+    "            \"sklearn\": \"scikit-learn\"\n",
+    "        }\n",
+    "        if name in poorly_named_packages.keys():\n",
+    "            name = poorly_named_packages[name]\n",
+    "\n",
+    "        yield name\n",
+    "imports = list(set(get_imports()))\n",
+    "\n",
+    "# The only way I found to get the version of the root package\n",
+    "# from only the name of the package is to cross-check the names \n",
+    "# of installed packages vs. imported packages\n",
+    "requirements = []\n",
+    "for m in pkg_resources.working_set:\n",
+    "    if m.project_name in imports and m.project_name!=\"pip\":\n",
+    "        requirements.append((m.project_name, m.version))\n",
+    "\n",
+    "for r in requirements:\n",
+    "    print(\"{}=={}\".format(*r))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -907,11 +966,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 54,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-27T17:34:11.709033Z",
-     "start_time": "2020-05-27T17:34:11.644072Z"
+     "end_time": "2020-05-27T18:51:14.417186Z",
+     "start_time": "2020-05-27T18:51:14.357223Z"
     }
    },
    "outputs": [
@@ -1008,198 +1067,28 @@
        "      <td>1362</td>\n",
        "      <td>48.295858</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0</td>\n",
-       "      <td>38</td>\n",
-       "      <td>1.103815</td>\n",
-       "      <td>1</td>\n",
-       "      <td>39</td>\n",
-       "      <td>2.103815</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>34</td>\n",
-       "      <td>1063</td>\n",
-       "      <td>548.500000</td>\n",
-       "      <td>35</td>\n",
-       "      <td>1064</td>\n",
-       "      <td>549.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>0</td>\n",
-       "      <td>17</td>\n",
-       "      <td>2.127273</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "      <td>3.127273</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>0</td>\n",
-       "      <td>38</td>\n",
-       "      <td>1.545891</td>\n",
-       "      <td>1</td>\n",
-       "      <td>39</td>\n",
-       "      <td>2.545891</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "      <td>3.500000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>15</td>\n",
-       "      <td>4.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>0</td>\n",
-       "      <td>49</td>\n",
-       "      <td>1.919192</td>\n",
-       "      <td>1</td>\n",
-       "      <td>50</td>\n",
-       "      <td>2.919192</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>0</td>\n",
-       "      <td>41</td>\n",
-       "      <td>1.505559</td>\n",
-       "      <td>1</td>\n",
-       "      <td>42</td>\n",
-       "      <td>2.505559</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>0</td>\n",
-       "      <td>28</td>\n",
-       "      <td>1.921429</td>\n",
-       "      <td>1</td>\n",
-       "      <td>29</td>\n",
-       "      <td>2.921429</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.125000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.125000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>0</td>\n",
-       "      <td>511</td>\n",
-       "      <td>32.752161</td>\n",
-       "      <td>1</td>\n",
-       "      <td>512</td>\n",
-       "      <td>33.752161</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>16</td>\n",
-       "      <td>213</td>\n",
-       "      <td>33.800000</td>\n",
-       "      <td>17</td>\n",
-       "      <td>214</td>\n",
-       "      <td>34.800000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>0</td>\n",
-       "      <td>277</td>\n",
-       "      <td>36.710526</td>\n",
-       "      <td>1</td>\n",
-       "      <td>278</td>\n",
-       "      <td>37.710526</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>0</td>\n",
-       "      <td>217</td>\n",
-       "      <td>31.115607</td>\n",
-       "      <td>1</td>\n",
-       "      <td>218</td>\n",
-       "      <td>32.115607</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "      <td>7.038462</td>\n",
-       "      <td>2</td>\n",
-       "      <td>19</td>\n",
-       "      <td>8.038462</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>8</td>\n",
-       "      <td>3.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>0</td>\n",
-       "      <td>252</td>\n",
-       "      <td>19.484848</td>\n",
-       "      <td>1</td>\n",
-       "      <td>253</td>\n",
-       "      <td>20.484848</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>0</td>\n",
-       "      <td>952</td>\n",
-       "      <td>98.446686</td>\n",
-       "      <td>1</td>\n",
-       "      <td>953</td>\n",
-       "      <td>99.446686</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           duracao                   duracao_ocupacao                  \n",
-       "              amin  amax        mean             amin  amax        mean\n",
-       "TIPO_EQPTO                                                             \n",
-       "0                3     3    3.000000                4     4    4.000000\n",
-       "1                0   837    2.412978                1   838    3.412978\n",
-       "2                0  1470   47.874485                1  1471   48.874485\n",
-       "3                0  1361   87.546289                1  1362   88.546289\n",
-       "4                0  1361   47.295858                1  1362   48.295858\n",
-       "6                0    38    1.103815                1    39    2.103815\n",
-       "8               34  1063  548.500000               35  1064  549.500000\n",
-       "9                0    17    2.127273                1    18    3.127273\n",
-       "10               0    38    1.545891                1    39    2.545891\n",
-       "11               1    14    3.500000                2    15    4.500000\n",
-       "12               0    49    1.919192                1    50    2.919192\n",
-       "13               0    41    1.505559                1    42    2.505559\n",
-       "14               0    28    1.921429                1    29    2.921429\n",
-       "15               0     1    0.125000                1     2    1.125000\n",
-       "21               0   511   32.752161                1   512   33.752161\n",
-       "22              16   213   33.800000               17   214   34.800000\n",
-       "23               0   277   36.710526                1   278   37.710526\n",
-       "25               0   217   31.115607                1   218   32.115607\n",
-       "26               1    18    7.038462                2    19    8.038462\n",
-       "27               1     7    2.000000                2     8    3.000000\n",
-       "28               0   252   19.484848                1   253   20.484848\n",
-       "40               0   952   98.446686                1   953   99.446686"
+       "           duracao                  duracao_ocupacao                 \n",
+       "              amin  amax       mean             amin  amax       mean\n",
+       "TIPO_EQPTO                                                           \n",
+       "0                3     3   3.000000                4     4   4.000000\n",
+       "1                0   837   2.412978                1   838   3.412978\n",
+       "2                0  1470  47.874485                1  1471  48.874485\n",
+       "3                0  1361  87.546289                1  1362  88.546289\n",
+       "4                0  1361  47.295858                1  1362  48.295858"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "historico.loc[:,['TIPO_EQPTO','duracao','duracao_ocupacao']].groupby(by='TIPO_EQPTO').agg([np.min, np.max, np.mean])"
+    "historico.loc[:,['TIPO_EQPTO','duracao','duracao_ocupacao']].groupby(by='TIPO_EQPTO').agg([np.min, np.max, np.mean]).head()"
    ]
   },
   {
